Updated home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,8 @@
         Hi, I'm Paul.
     </p>
     <p>
-       I am currently studying Mechatronics Engineering at the University of Waterloo.
-       I have a passion for innovation and and a firm believer that anything and everything
-       can be improved.
-    </p>
-    <p>
-        Take a look around my site to learn more about who I am, what I have done, what I am currently working
-        on, and what I am capable of.
+       I'm a Software Eningeering student at the University of Waterloo, Canada.
+       I'm also an avid hockey fan, modularity fanatic, and craft beer enthusiast.
     </p>
     <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>.</p>
 </div>
