--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     </p>
     <p>
        I'm a Software Eningeering student at the University of Waterloo, Canada.
-       I'm also an avid hockey fan, modularity fanatic, and craft beer enthusiast.
+       I'm also an avid hockey fan and craft beer enthusiast.
     </p>
     <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>.</p>
 </div>
