--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,26 +5,21 @@
 <br/>
 <h2>Contact Information</h2>
 <p>I'm always interested in new opportunities. Feel free to contact me.</p>
-<p>Email: <a href="mailto:paul.ashbourne@hotmail.com">paul.ashbourne@hotmail.com</a></p>
+<p>Email: <a href="mailto:paul.ashbourne@gmail.com">paul.ashbourne@gmail.com</a></p>
 <p>For more contact information, please see my <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">resume</a>.</p>
 <br/>
 <br/>
 <br/>
 <br/>
-<h2>Social Media</h2>
-<div style="width:30%;float:left;text-align:center;">
-<a href="http://ca.linkedin.com/in/paulashbourne">
-    <img style="width:300px;height:70px;min-width:325px;" src="/static/img/linkedin.png" alt="View my LinkedIn profile">
-</a>
+<h2>Other Links</h2>
+<div style="float:left;width:50%;text-align:center;">
+<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/paulashbourne" data-format="inline" data-related="false"></script>
 </div>
-<div style="width:30%;float:left;text-align:center;min-width:325px;">
-<a href="http://www.facebook.com/paul.ashbourne">
-    <img style="width:300px;height:70px;" src="/static/img/facebook.png" alt="Add me on Facebook">
-</a>
-</div>
-<div style="width:30%;float:left;text-align:center;">
-<a href="http://twitter.com/paulashbourne">
-    <img style="width:370px;height:70px;min-width:395px;" src="/static/img/twitter.png" alt="Follow me on Twitter">
+<div style="float:right;width:50%;text-align:center;">
+<a href="https://github.com/paulashbourne">
+  <img src="/static/img/octocat.png" height=100 />
+  <img src="/static/img/github_logo.png" height=100 />
 </a>
 </div>
 {% end %}
