--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
        I'm a Software Eningeering student at the University of Waterloo, Canada.
        I'm also an avid hockey fan and craft beer enthusiast.
     </p>
-    <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>.</p>
+    <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>. 
+    Github? Right <a href="https://github.com/paulashbourne">here</a>.</p>
 </div>
 {% end %}
