--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,14 +3,28 @@
 {% block page_content %}
 <h1>Projects</h1>
 <p>Here is a short list of some of the cool projects that I have worked on.</p>
+<p>For more projects and source code, check out my <a href="https://github.com/paulashbourne">Github</a></p>
+<div class="project-container">
+  <h2>WLP4 Compiler</h2>
+    <p>
+      A compiler for the WLP4 language for the MIPS architecture.
+      Built as an assignment for CS 241 - Foundations of Sequential Programs
+      <br/>
+      [C++, Compilers, Assembly]
+    </p>
+    <p><a href="https://github.com/paulashbourne/wlp4compiler">View on Github</a></p>
+</div>
 <div class="project-container">
     <h2>Health Care Patient Database</h2>
     <p>
-        Developed an application and database to store health care records for thousands of palliative care patients in the Greater Toronto Area. Independently built the system from the ground-up to replace an existing Microsoft Access application that suffered from poor performance and excessive complexity. Extracted all data from original database and transferred to new database while maintaining data integrity. Currently holds over 100,000 records. Set up VPN Server for secure access. Uses MySQL and PHP backend.
+        Developed an application and database to store health care records for thousands of palliative care patients in the Greater Toronto Area.
+        Independently built the system from the ground-up to replace an existing Microsoft Access application that suffered from poor performance
+        and excessive complexity. Extracted all data from original database and transferred to new database while maintaining data integrity.
+        Currently holds over 100,000 records. Set up VPN Server for secure access.
         <br/>
-        [MySQL, PHP, VB.NET, HTML+CSS, JavaScript+jQuery]
+        [MySQL, PHP, HTML, CSS, Javascript]
         <br/><br/>
-        Developed for ESCTT Inc. during employment as Software Engineer.
+        Developed for ESCTT Inc. during employment as Software Engineering Intern.
     </p>
 </div>
 <div class="project-container">
@@ -35,9 +49,9 @@
         investment professionals with tools to conduct in-depth analysis of client
         portfolios and track performance in compliance with CRM2 standards. Developed data model that allows for analysis
         of multiple portfolios across various clients. Early feedback from financial
-        professionals has been extremely positive. <br/>[MySQL, PHP, Python, HTML+CSS, JavaScript+jQuery]
+        professionals has been extremely positive. <br/>[Python, MySQL, HTML, CSS, Javascript]
         <br/><br/>
-        Developed for ESCTT Inc. during employment as Software Engineer.
+        Developed for ESCTT Inc. during employment as Software Engineering Intern.
     </p>
 </div>
 <div class="project-container">
@@ -63,7 +77,8 @@
 <div class="project-container">
     <h2>Sudoku Solver Application</h2>
     <img src="/static/img/SudokuSolver.png" style="width:367px;height:421px;"/>
-    <p>Developed an application that can solve any Sudoku puzzle in the blink of an eye. Uses a modified version of the backtracking algorithm for optimal performance. <br/>[Java] - <a href="files/SudokuSolver.jar">Download</a>
+    <p>Developed an application that can solve any Sudoku puzzle in the blink of an eye.
+    Uses a modified version of the backtracking algorithm for optimal performance. <br/>[Java] - <a href="files/SudokuSolver.jar">Download</a>
     </p>
 </div>
 <div class="project-container">
@@ -86,13 +101,6 @@
     <img src="/static/img/Othello.png" style="width:400px;height:280px;"/>
     <p>
         A desktop implementation of the board game Othello. <br/>[Java] - <a href="files/Othello.jar">Download</a>
-    </p>
-</div>
-<div class="project-container">
-    <h2>Iron Man Suit</h2>
-    <img src="/static/img/Iron-Man.jpg" style="width:177px;height:323px;"/>
-    <p>
-        ...some day
     </p>
 </div>
 {% end %}
