Minor change to password manager

--- a/templates/password.html
+++ b/templates/password.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
       if (domain == "" || password == "") {
         alert("Please complete all fields");
       } else {
-        var passwordHash = CryptoJS.SHA256(username+":"+password+"@"+domain);
+        var passwordHash = CryptoJS.SHA256(password+domain);
         $('#password-result').html("Your password is: " + passwordHash);
       }
     });
