--- a/templates/password.html
+++ b/templates/password.html
@@ -22,8 +22,11 @@
       <p id="password-result"></p>
     </div>
     <p>How does this work? The domain of the website is appended to your desired password. The resulting string
-    is then hashed using SHA-256. The result is that you have a unique password for the website you are using. Everything
-    is done client-side, so your credentials never leave your computer. See for yourself, it's all in the page source.</p>
+    is then hashed using SHA-256 and truncated to 16 characters. The result is that you have a unique password
+    for the website you are using. Everything is done client-side, so your credentials never leave your computer.
+    See for yourself, it's all in the page source.</p>
+    <p>Why truncate? Because some websites have chosen to put unnecessarily low limits on password lengths. This is super bad
+    because security and such. It really doesn't take that much longer to hash a 64 character password than a 16 character one.</p>
     <p>This tool was hacked together in 10 minutes. I take no responsibility for any consequences that arise from your use of it.</p>
 </div>
 <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
@@ -37,7 +40,7 @@ $(document).ready(function() {
       if (domain == "" || password == "") {
         alert("Please complete all fields");
       } else {
-        var passwordHash = CryptoJS.SHA256(password+domain);
+        var passwordHash = CryptoJS.SHA256(password+domain).toString().substring(0, 16);
         $('#password-result').html("Your password is: " + passwordHash);
       }
     });
