--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,6 +5,18 @@
 <p>Here is a short list of some of the cool projects that I have worked on.</p>
 <p>For more projects and source code, check out my <a href="https://github.com/paulashbourne">Github</a></p>
 <div class="project-container">
+  <h2>StoreStuff</h2>
+    <p>
+      On-demand self-storage app built for Berkeley's Calhack's 2.0.
+      App allows users to store items in self-storage facilities using their phone.
+      App allows user to summon driver to pick up and store the item, as well as
+      retrieve it.
+      <br/>
+      [Node.js]
+    </p>
+    <p><a href="https://github.com/paulashbourne/storestuff">View on Github</a></p>
+</div>
+<div class="project-container">
   <h2>WLP4 Compiler</h2>
     <p>
       A compiler for the WLP4 language for the MIPS architecture.
@@ -13,19 +25,6 @@
       [C++, Compilers, Assembly]
     </p>
     <p><a href="https://github.com/paulashbourne/wlp4compiler">View on Github</a></p>
-</div>
-<div class="project-container">
-    <h2>Health Care Patient Database</h2>
-    <p>
-        Developed an application and database to store health care records for thousands of palliative care patients in the Greater Toronto Area.
-        Independently built the system from the ground-up to replace an existing Microsoft Access application that suffered from poor performance
-        and excessive complexity. Extracted all data from original database and transferred to new database while maintaining data integrity.
-        Currently holds over 100,000 records. Set up VPN Server for secure access.
-        <br/>
-        [MySQL, PHP, HTML, CSS, Javascript]
-        <br/><br/>
-        Developed for ESCTT Inc. during employment as Software Engineering Intern.
-    </p>
 </div>
 <div class="project-container">
     <h2>RiskMP Risk Management Software</h2>
@@ -38,9 +37,22 @@
         collaboration and project sharing. Includes automatic recurring billing system. Developed an extension for Microsoft Project
         that allows users to synchronize their projects. Beta testing conducted by project
         management professionals has yielded excellent feedback. <br/>
-        [MySQL, PHP, VB.NET, HTML+CSS, JavaScript+jQuery]
+        [Python, MySQL, SQLAlchemy, jQuery, Backbone.js, Bootstrap, HTML5, CSS3]
         <br/><br/>
         Developed for ESCTT Inc. during employment as Software Engineer. - <a href="https://riskmp.com/">Visit Site</a>
+    </p>
+</div>
+<div class="project-container">
+    <h2>Health Care Patient Database</h2>
+    <p>
+        Developed an application and database to store health care records for thousands of palliative care patients in the Greater Toronto Area.
+        Independently built the system from the ground-up to replace an existing Microsoft Access application that suffered from poor performance
+        and excessive complexity. Extracted all data from original database and transferred to new database while maintaining data integrity.
+        Currently holds over 100,000 records. Set up VPN Server for secure access.
+        <br/>
+        [MySQL, PHP, jQuery, Bootstrap, HTML5, CSS3]
+        <br/><br/>
+        Developed for ESCTT Inc. during employment as Software Engineering Intern.
     </p>
 </div>
 <div class="project-container">
@@ -49,7 +61,8 @@
         investment professionals with tools to conduct in-depth analysis of client
         portfolios and track performance in compliance with CRM2 standards. Developed data model that allows for analysis
         of multiple portfolios across various clients. Early feedback from financial
-        professionals has been extremely positive. <br/>[Python, MySQL, HTML, CSS, Javascript]
+        professionals has been extremely positive. <br/>
+        [Python, MySQL, SQLAlchemy, jQuery, Backbone.js, Bootstrap, HTML5, CSS3]
         <br/><br/>
         Developed for ESCTT Inc. during employment as Software Engineering Intern.
     </p>
