--- a/templates/about.html
+++ b/templates/about.html
@@ -51,37 +51,37 @@
     var ScreenCtx = document.getElementById("ScreenChart").getContext("2d");
     var AgeData = {
         labels: ["", "1995", "1996", "1997", "1998", "1999", "2000", "2001", "2002", "2003", "2004", "2005",
-            "2006", "2007", "2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015"],
+            "2006", "2007", "2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015", "2016"],
         datasets: [
             {
                 fillColor: "rgba(151,187,205,0.5)",
                 strokeColor: "rgba(151,187,205,1)",
                 pointColor: "rgba(151,187,205,1)",
                 pointStrokeColor: "#fff",
-                data: [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
+                data: [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
             }
         ]
     };
     var GraphUseData = {
         labels: ["", "1995", "1996", "1997", "1998", "1999", "2000", "2001", "2002", "2003", "2004", "2005",
-            "2006", "2007", "2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015"],
+            "2006", "2007", "2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015", "2016"],
         datasets: [
             {
                 fillColor: "rgba(151,187,205,0.5)",
                 strokeColor: "rgba(151,187,205,1)",
                 pointColor: "rgba(151,187,205,1)",
                 pointStrokeColor: "#fff",
-                data: [0, 0, 2, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]
+                data: [0, 0, 2, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400, 441]
             }
         ]
     };
     var LinesOfCodeData = {
-        labels: ["2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015"],
+        labels: ["2008", "2009", "2010", "2011", "2012", "2013", "2014", "2015", "2016"],
         datasets: [
             {
                 fillColor: "#F7464A",
                 strokeColor: "#FF0000",
-                data: [5, 800, 2000, 3000, 5000, 12000, 20000, 26000]
+                data: [5, 800, 2000, 3000, 5000, 12000, 20000, 26000, 35000]
             }
         ]
     };
