--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,10 @@
     <img src='/static/img/Paul-Ashbourne.jpg' style='height:400px;'/>
 </div>
 <div style="text-align:center;">
-    <h1>Welcome</h1>
+    <h1>Hi, I'm Paul.</h1>
     <p>
-        Hi, I'm Paul.
-    </p>
-    <p>
-       I'm a Software Eningeering student at the University of Waterloo, Canada.
-       I'm also an avid hockey fan and craft beer enthusiast.
+       I am a 3A Software Engineering at the University of Waterloo in Canada.
+       I'm also a pilot, aspiring entrepreneur, and avid hockey fan.
     </p>
     <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>. 
     Github? Right <a href="https://github.com/paulashbourne">here</a>.</p>
