About page improvements

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,22 +26,22 @@
 </div>
 <div style="width:100%;height:0;clear:both;"></div>
 <br/>
-<!--
-<h2>It's always important to analyze test data</h2>
-<h3>1A Term (Mechatronics Engineering, University of Waterloo):</h3>
-<ul>
-    <li>Linear Algebra for Engineering (MATH 115) - Final Grade: 100%</li>
-    <li>Calculus 1 for Engineering (MATH 116) - Final Grade: 95%</li>
-    <li>Digital Computation (GENE 121) - Final Grade: 94%</li>
-    <li>Chemistry for Engineers (CHE 102) - Final Grade: 95%</li>
-    <li>Mechatronics Engineering (MTE 100) - Final Grade: 88%</li>
-    <li>Weighted Average: 93.8%</li>
-</ul>
--->
 <h2>Here's some feedback from the system users</h2>
-<p>"Paul is a high achiever, creative, innovative, and motivated. You can trust Paul to get the job done! His intelligence and drive allow him to accomplish any task he is given. His interpersonal skills are excellent. I would like to express my strongest recommendation." –Anne Leroux (President, ESCTT Inc.)</p>
 <p>
-"Paul went above and beyond my expectations for someone of his experience level. He continually amazed me with his speed and the urgency at which he develops. He accomplished a lot this term and should be very proud of what he did. I considered him an integral part of my team while he was at Wish." –Josh Kuntz (Head of Platform Engineering, Wish)
+"Paul went above and beyond my expectations for someone of his experience level.
+He continually amazed me with his speed and the urgency at which he develops.
+He accomplished a lot this term and should be very proud of what he did. I
+considered him an integral part of my team while he was at Wish."
+<br/>
+–Josh Kuntz (Head of Platform Engineering, Wish)
+</p>
+<p>
+"Paul is a high achiever, creative, innovative, and motivated. You can trust Paul
+to get the job done! His intelligence and drive allow him to accomplish any task
+he is given. His interpersonal skills are excellent. I would like to express my
+strongest recommendation."
+<br/>
+–Anne Leroux (President, ESCTT Inc.)
 </p>
 <p style="color:#333333;font-weight:bold;">Looking for more information? Check out my <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">resume</a>.</p>
 <script type='text/javascript'>
