Update photo, current academic term

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,13 @@
 
 {% block page_content %}
 <div style='margin-top:100px;text-align:center;'>
-    <img src='/static/img/Paul-Ashbourne.jpg' style='height:400px;'/>
+    <img src='/static/img/paul-ashbourne.jpg' style='height:400px;'/>
 </div>
 <div style="text-align:center;">
     <h1>Hi, I'm Paul.</h1>
     <p>
-       I am a 3A Software Engineering at the University of Waterloo in Canada.
-       I'm also a pilot, aspiring entrepreneur, and avid hockey fan.
+       I am a 3B Software Engineering at the University of Waterloo in Canada.
+       I'm also a pilot, aspiring entrepreneur, and hopeless Toronto Maple Leafs fan.
     </p>
     <p>Looking for my resume? Click <a href="/static/files/PaulAshbourne-Resume.pdf" target="_blank">here</a>. 
     Github? Right <a href="https://github.com/paulashbourne">here</a>.</p>
