--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block page_content %}
 <div style='margin-top:100px;text-align:center;'>
-    <img src='/static/img/paul-ashbourne.jpg' style='height:400px;'/>
+  <img src='/static/img/paul-ashbourne.jpg' style='height:400px;'/>
 </div>
 <div style="text-align:center;">
     <h1>Hi, I'm Paul.</h1>
@@ -11,6 +11,6 @@
        I'm also a pilot, aspiring entrepreneur, and hopeless Toronto Maple Leafs fan.
     </p>
     <p>Looking for my resume? Click <a href="/static/files/paul-ashbourne-resume.pdf" target="_blank">here</a>. 
-    Github? Right <a href="https://github.com/paulashbourne">here</a>.</p>
+    Github? Right <a href="https://github.com/paulashbourne" target="_blank">here</a>.</p>
 </div>
 {% end %}
